2012-08-23  James Robinson  <jamesr@chromium.org>

        [chromium] Convert WebAnimationCurve subtypes into pure virtual
        https://bugs.webkit.org/show_bug.cgi?id=94068

        Reviewed by Adrienne Walker.

        This makes the Web*AnimationCurve interfaces pure virtual to provide better insulation from the implementation
        details of the classes.

        * chromium/public/WebAnimation.h:
        (WebKit::WebAnimation::WebAnimation):
        (WebAnimation):
        * chromium/public/WebAnimationCurve.h:
        * chromium/public/WebFloatAnimationCurve.h:
        (WebFloatAnimationCurve):
        (WebKit::WebFloatAnimationCurve::~WebFloatAnimationCurve):
        * chromium/public/WebTransformAnimationCurve.h:
        (WebTransformAnimationCurve):
        (WebKit::WebTransformAnimationCurve::~WebTransformAnimationCurve):

2012-08-22  James Robinson  <jamesr@chromium.org>

        [chromium] Remove WebLayer::setChildren API
        https://bugs.webkit.org/show_bug.cgi?id=94749

        Reviewed by Adrienne Walker.

        This is redundant with removeAllChildren() / addChild() and less efficient.

        * chromium/public/WebLayer.h:
        (WebLayer):

2012-08-22  James Robinson  <jamesr@chromium.org>

        [chromium] Change WebLayer from a concrete type to a pure virtual interface
        https://bugs.webkit.org/show_bug.cgi?id=94174

        Reviewed by Adrienne Walker.

        This changes WebLayer from a value type to a pure virtual interface and changes Web*Layers from subtypes to
        standalone types that have a WebLayer. This better isolates the implementation from the interface and, since
        it's not possible to re-wrap an existing layer, makes cleanup explicit instead of requiring the caller to
        invoke special cleanup methods before shutdown.

        * chromium/public/WebContentLayer.h:
        (WebContentLayer):
        * chromium/public/WebExternalTextureLayer.h:
        (WebExternalTextureLayer):