@@ -35,7 +35,17 @@ namespace WebKit {
 
 class WebRTCPeerConnectionHandlerClient {
 public:
+    enum ReadyState {
+        ReadyStateNew = 1,
+        ReadyStateOpening = 2,
+        ReadyStateActive = 3,
+        ReadyStateClosing = 4,
+        ReadyStateClosed = 5
+    };
+
     virtual ~WebRTCPeerConnectionHandlerClient() { }
+
+    virtual void didChangeReadyState(ReadyState) = 0;
 };
 
 } // namespace WebKit
